Tue Apr 19 13:18:12 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/time.rb: revert r54167 because it would break
	  backward compatibilities, and it is documented that
	  Time.parse does not take into account time zone
	  abbreations other than ones described in RFC 822

Tue Apr 19 13:12:03 2016  Naotoshi Seo  <sonots@gmail.com>

	* ChangeLog: Fix dates of previous commits

Tue Apr 19 12:45:03 2016  Naotoshi Seo  <sonots@gmail.com>

	* ChangeLog: Add decriptions for logger updates
	* NEWS: Add descriptions for logger updates

Tue Apr 19 12:45:02 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/logger.rb: Add shift_period_suffix option

Tue Apr 19 12:45:01 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/logger.rb: Allow specifying logger parameters in constructor
	  such as level, progname, datetime_format, formatter.

Mon Apr 18 16:07:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): should not replace the
	  current target INSN, not to follow the replaced dangling link in
	  the caller.  [ruby-core:74993] [Bug #11816]

Mon Apr 18 12:56:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_truncate): add an optional parameter, digits, as
	  well as Float#round.  [Feature #12245]

	* numeric.c (int_truncate): add an optional parameter, digits, as
	  well as Integer#round.  [Feature #12245]

Sun Apr 17 04:18:56 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* tool/redmine-backporter.rb: revisions are strings.

Sat Apr 16 14:26:49 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* ext/date/date_core.c : remove not used f_getlocal macro.
	  After r54553 f_getlocal macro is not used.

Sat Apr 16 14:15:24 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* ext/date/date_core.c : remove not used f_utc6 macro.
	  After r54169 f_utc6 macro is not used.

Sat Apr 16 10:00:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (struct_make_members_list, rb_struct_s_def): member